<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/mainMenu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_global_nav_home"
            android:icon="@drawable/ic_main"
            android:title="@string/title_home" />
        <item
            android:id="@+id/action_global_nav_menu"
            android:icon="@drawable/ic_bowl_full_of_food"
            android:title="@string/title_menu" />
        <item
            android:id="@+id/action_global_nav_favorites"
            android:icon="@drawable/ic_heart"
            android:title="@string/title_favorites" />
        <item
            android:id="@+id/action_global_nav_cart"
            android:icon="@drawable/ic_baseline_shopping_cart"
            android:title="@string/title_cart" />
        <item
            android:id="@+id/action_global_nav_profile_login"
            android:icon="@drawable/ic_user"
            android:title="@string/title_profile" />
        <item
            android:id="@+id/nav"
            android:icon="@drawable/ic_list"
            android:title="@string/title_orders" />
        <item
            android:id="@+id/action_global_nav_dish"
            android:icon="@drawable/ic_bell"
            android:title="@string/title_notifications" />
    </group>
</menu>