<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/profile_tv_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:paddingBottom="3dp"
        android:text="@string/labelFirstName"
        android:textColor="@color/color_text_view"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/profile_et_first_name"
        app:layout_constraintStart_toStartOf="@+id/profile_et_first_name" />

    <TextView
        android:id="@+id/profile_tv_err_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:paddingBottom="3dp"
        android:text="@string/err_only_letters"
        android:textColor="@color/color_error"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/profile_et_first_name"
        app:layout_constraintEnd_toEndOf="@+id/profile_et_first_name"
        tools:text="@string/err_only_letters"
        tools:visibility="visible" />


    <EditText
        android:id="@+id/profile_et_first_name"
        style="@style/StyleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:inputType="text"
        android:text="@string/userFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_tv_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:paddingBottom="3dp"
        android:text="@string/labelLastName"
        android:textColor="@color/color_text_view"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/profile_et_last_name"
        app:layout_constraintStart_toStartOf="@id/profile_et_last_name" />

    <TextView
        android:id="@+id/profile_tv_err_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:paddingBottom="3dp"
        android:text="@string/err_only_letters"
        android:textColor="@color/color_error"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/profile_et_last_name"
        app:layout_constraintEnd_toEndOf="@+id/profile_et_last_name"
        tools:text="@string/err_only_letters"
        tools:visibility="visible" />


    <EditText
        android:id="@+id/profile_et_last_name"
        style="@style/StyleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:inputType="text"
        android:text="@string/userLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_et_first_name" />

    <TextView
        android:id="@+id/profile_tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:paddingBottom="3dp"
        android:text="@string/labelEmail"
        android:textColor="@color/color_text_view"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/profile_et_email"
        app:layout_constraintStart_toStartOf="@id/profile_et_email" />

    <TextView
        android:id="@+id/profile_tv_err_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:paddingBottom="3dp"
        android:text="@string/err_not_valid_email"
        android:textColor="@color/color_error"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/profile_et_email"
        app:layout_constraintEnd_toEndOf="@+id/profile_et_email"
        tools:text="@string/err_not_valid_email"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/profile_et_email"
        style="@style/StyleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:inputType="textEmailAddress"
        android:text="@string/userEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_et_last_name" />


    <Button
        android:id="@+id/profile_btn_save"
        style="@style/StyleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Изменить"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_et_email" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profile_btn_changel"
        style="@style/StyleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/labelChangePassword"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_btn_save"
        app:strokeColor="@color/color_stroke"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>