<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recovery.RecoveryFragment">

    <TextView
        android:id="@+id/recov_tv_help"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:paddingBottom="3dp"
        android:text="@string/textRecovPassword"
        android:textAlignment="viewStart"
        android:textColor="@color/color_text_view"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/recov_et_email"
        app:layout_constraintStart_toStartOf="@+id/recov_et_email"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recov_tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:paddingBottom="3dp"
        android:text="@string/labelEmail"
        android:textColor="@color/color_text_view"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/recov_et_email"
        app:layout_constraintStart_toStartOf="@id/recov_et_email"
        app:layout_constraintTop_toBottomOf="@+id/recov_tv_help" />

    <EditText
        android:id="@+id/recov_et_email"
        style="@style/StyleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recov_tv_help" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/recov_btn_send"
        style="@style/StyleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelSend"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recov_et_email" />
</androidx.constraintlayout.widget.ConstraintLayout>